PostCube - přidání Playbutton do videa + js

--- a/postcube.cz/src/html/components/video.njk
+++ b/postcube.cz/src/html/components/video.njk
@@ -1,14 +1,26 @@
 {% set video = images["video-img.png"]["public_id"] %}
 
 <style>
-  .video h2{
+  .video h2 {
     text-align: center;
   }
+
   .video__content {
     text-align: center;
   }
+
   .video__content video {
     width: 80%;
+  }
+  .video__content-wrapper {
+    position: relative;
+  }
+  .video__content-wrapper button {
+    position: absolute;
+    top: 33%;
+    left: 43%;
+    background: none;
+    border: none;
   }
 
 </style>
@@ -19,7 +31,36 @@
         <h2>100&nbsp;% doručených zásilek a 0&nbsp;% starostí</h2>
       </div>
       <div class="video__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <video src="https://res.cloudinary.com/topmonks/video/upload/v1621971318/postcube.cz/PostCube-Video.mp4" controls="true"></video>
+        <div class="video__content-wrapper">
+        <video id="video"
+               src="https://res.cloudinary.com/topmonks/video/upload/f_auto/v1621971318/postcube.cz/PostCube-Video.mp4">
+          <img alt="Video"
+               src="{{ video | cloudinaryUrl(dpr="auto", width=1082) }}"
+               srcset="{{ video | cloudinaryUrl(dpr="1", width=1082) }} 1x,
+                       {{ video | cloudinaryUrl(dpr="1.5", width=1082) }} 1.5x,
+                       {{ video | cloudinaryUrl(dpr="2", width=1082) }} 2x"
+               width="1082"
+               height="608">
+        </video>
+        <button id="play-btn">
+          <svg width="162" height="162" viewBox="0 0 162 162" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M81 0C36.2677 0 0 36.2677 0 81C0 125.732 36.2677 162 81 162C125.732 162 162 125.732 162 81C162 36.2677 125.732 0 81 0ZM60.75 114.75V47.25L121.5 81.9855L60.75 114.75Z"
+              fill="white"/>
+          </svg>
+        </button>
+        </div>
+
+        <script type="module">
+          const video = document.getElementById("video")
+          const playButton = document.getElementById("play-btn")
+          playButton.addEventListener("click", () => {
+            video.play();
+            video.controls = true;
+            playButton.style.display="none";
+          });
+        </script>
+
       </div>
     </div>
   </div>
