PostCube - Policy and Terms přidán padding na stránkách

--- a/postcube.cz/src/html/PP/index.njk
+++ b/postcube.cz/src/html/PP/index.njk
@@ -13,6 +13,10 @@
   <meta property="og:site_name" content="postcube.cz">
 
   <style>
+
+    .policy__content {
+      padding-top: 4em;
+    }
     .policy__content h1 {
       font-size: 54px;
       margin-bottom: 24px;
