Confirmed attendees added

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -519,7 +519,7 @@
       <p class="hc-text--gay">
         <strong
         ><em
-          >Technologie, workshopy, panelovky, sport i&nbsp;relax a
+          >Technologie, workshopy, panelovky, code&nbsp;retreat, sport i&nbsp;relax a
             večerní&nbsp;zábava</em
           ></strong
         >
@@ -580,7 +580,7 @@
       tři dny v&nbsp;přírodě si užít společně.
     </p>
     <p>
-      Máme už první předběžné zájemce o&nbsp;účast. Potkáte se například
+      Máme už první potvrzené účastníky. Potkáte se například
       s&nbsp;klukama a holkama z&nbsp;<span
         property="organizer"
         typeof="Organization"
@@ -607,6 +607,41 @@
       <span property="attendee" typeof="Organization"
       ><a property="sameAs" href="https://www.mavericks.legal/"
         >Mavericks</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.reflexcapital.com/"
+        >Reflex Capital</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.kiwi.com/en/"
+        >Kiwi</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.liftago.com/"
+        >Liftago</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.twisto.cz/"
+        >Twisto</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.aimsapi.com/"
+        >AIMS</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.alza.cz/"
+        >Alza</a
+        ></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.flatzone.cz/"
+        >Flatzone</a
         ></span
       >,
       <span property="attendee" typeof="Organization"
