Nový odkazovací link pro na Case Study - Xixoio.com

--- a/www.topmonks.com/src/html/case-studies/xixoio/index.njk
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.njk
@@ -134,7 +134,7 @@
         <p>Their main goal is to develop a fully compliant end-to-end solution for the
           tokenization of companies and security token investments. It aims to integrate
           all services for the IPCO (Initial Public Coin Offering) platform, <a
-            href="http://www.ipco.io">www.ipco.io</a>.</p>
+            href="https://www.xixoio.com/">xixoio.com</a>.</p>
 
         <p>The IPCO platform handles legal, regulatory and compliance issues up to the
           point where the funds are raised, investors’ shares are entered into business
