[www.hackercamp.cz] Added Presto Ventures

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -646,6 +646,9 @@
       >,
       <span property="attendee" typeof="Organization"
       ><a property="sameAs" href="https://geneea.com/">Geneea</a></span
+      >,
+      <span property="attendee" typeof="Organization"
+      ><a property="sameAs" href="https://www.prestoventures.com/">Presto Ventures</a></span
       >, …a seznam pořád&nbsp;roste.
     </p>
   </div>
