PostCube - zmenšení nadpisů v podstránkách

--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -63,6 +63,11 @@
     .main-info {
       position: relative;
     }
+    @media screen and (min-width: 840px) {
+      .main-info__content h1 {
+        font-size: 70px;
+      }
+    }
 
     @media screen and (min-width: 1440px) {
       .main-info img {
@@ -93,6 +98,7 @@
     .contact {
       margin-top: 8em;
     }
+
   </style>
 
 {% endblock %}
