--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -78,6 +78,11 @@
         align-self: center;
       }
     }
+    @media screen and (min-width: 840px) {
+      .main-info__content h1 {
+        font-size: 70px;
+      }
+    }
   </style>
 
 {% endblock %}
