--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -35,6 +35,10 @@
       font-size: 24px;
       text-decoration: none;
     }
+    .about .icon-section__content svg, .transport .icon-section__content svg, .icon-section .icon-section__content svg{
+      min-height: 48px;
+    }
+
     @media (min-width: 840px) and (max-width: 2039px) {
       .main-info {
         align-self: center;
@@ -82,6 +86,9 @@
       .main-info__content h1 {
         font-size: 70px;
       }
+      .contact {
+        margin-top: 12em;
+      }
     }
   </style>
 
@@ -94,8 +101,8 @@
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>Vaši kurýři nás budou milovat!</h1>
           <p>PostCube šetří náklady a ulehčí práci kurýrům. Spolupracujte
-            s&nbsp;námi a zajistěte svým zákazníkům maximální pohodlí při online
-            nakupování.</p>
+            s&nbsp;námi a zajistěte svým zákazníkům maximální komfort při jejich online
+            nákupech.</p>
         </div>
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <img alt="Fotka PostCube Kurýra" src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}">
@@ -106,7 +113,7 @@
   <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Doručení i&nbsp;vyzvednutí je s&nbsp;PostCube hračka.</h2>
+        <h2>S&nbsp;PostCube získáte zajímavé výhody</h2>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -195,7 +202,7 @@
           <path d="M25.7163 15.6H21.1723C20.8523 18.064 19.7643 18.8 17.8763 18.8H16.3723V22.928H17.9723C18.9323 22.928 20.4683 22.64 20.8843 22.032V38H25.7163V15.6ZM29.382 33.392V38H34.214V33.392H29.382Z" fill="white"/>
         </svg>
         <h3>Příprava zásilky</h3>
-        <p>Zákazník vloží zásilku pro odeslání do boxu a v&nbsp;aplikaci vyplní
+        <p>Odesílatel vloží zásilku pro odeslání do boxu a v&nbsp;aplikaci vyplní
           údaje o&nbsp;příjemci. Při doručování zásilky ji kurýr vyzvedne
           u&nbsp;prodejce.</p>
       </div>
@@ -217,8 +224,9 @@
           <path d="M24.0793 38.256C28.5593 38.256 32.4633 35.696 32.4633 31.344C32.4633 28.912 31.0553 26.992 28.8793 26.192C30.4792 25.296 31.5353 23.504 31.5353 21.424C31.5353 18.096 28.2393 15.344 23.8553 15.344C19.7913 15.344 16.0473 17.968 16.0153 22.448H20.5593C20.5913 20.368 21.9353 19.472 23.7593 19.472C25.6153 19.472 26.8953 20.432 26.8953 21.936C26.8953 23.44 25.7433 24.496 23.9833 24.496H21.9353V28.432H24.0793C26.2873 28.432 27.6953 29.488 27.6953 31.216C27.6953 33.008 26.2873 34.096 24.0793 34.096C21.9993 34.096 20.2713 33.04 20.2713 30.928H15.6313C15.6313 35.536 19.4073 38.256 24.0793 38.256ZM35.507 33.392V38H40.339V33.392H35.507Z" fill="white"/>
         </svg>
         <h3>Otevření schránky</h3>
-        <p>Pomocí jednorázového odkazu ve své aplikaci kurýr otevře schránku,
-          vloží do něj zásilku nebo naopak zásilku vyzvedne.</p>
+        <p>Pomocí jednorázového kódu kurýr otevře PostCube a vloží do něj
+          zásilku nebo naopak zásilku vyzvedne. V&nbsp;aplikaci to následně potvrdí
+          jedním klikem.</p>
       </div>
       <div
         class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
@@ -237,11 +245,7 @@
   </section>
 
 
-
   {% include 'components/get-app.njk' %}
-  {% include 'components/choose-pc.njk' %}
-  {% include 'components/create-pc.njk' %}
-  {% include 'components/faq.njk' %}
 
 
   <section id="contact" class="contact">
