Postcube - Změna velikostí ikon (heights)

--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -1,3 +1,10 @@
+<style>
+  .how-it-works .icon-section__content svg {
+    min-height: 48px;
+  }
+</style>
+
+
 <section id="how-it-works" class="how-it-works icon-section mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
