--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -27,6 +27,9 @@
     .main-info__content {
       max-width: 97%;
     }
+    .about .icon-section__content svg {
+      min-height: 48px;
+    }
     @media screen and (min-width: 840px) {
       .main-info {
         align-self: center;
