PostCube - Změna textů v podstránce Domácnosti

--- a/postcube.cz/src/html/components/why-pc.njk
+++ b/postcube.cz/src/html/components/why-pc.njk
@@ -36,8 +36,8 @@
         <path d="M25.6201 8.9706C25.6201 5.8772 23.1123 3.37012 20.0189 3.37012C16.9255 3.37012 14.4185 5.8772 14.4185 8.9706C14.4185 12.064 16.9255 14.5711 20.0189 14.5711C23.1117 14.5711 25.6201 12.064 25.6201 8.9706Z" fill="#1538E5"/>
       </svg>
       <h3>Bezstrarostné</h3>
-      <p>Už žádné přešlapování na poště, objíždění výdejních míst ani
-        trnutí, zda balík opravdu dorazí a&nbsp;kdy.</p>
+      <p>Už žádné přešlapování na poště, objíždění výdejních míst a
+        zbytečná ztráta času čekáním na zásilky.</p>
     </div>
     <div class="icon-section__content mdc-layout-grid__cell">
       <svg width="64" height="64" viewBox="0 0 64 45" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,8 +51,8 @@
         <path d="M54.3168 29.4229H9.68396V39.5398H54.3168V29.4229Z" fill="#1538E5"/>
       </svg>
       <h3>Pohodlné</h3>
-      <p>Bezkontaktní příjem i&nbsp;odeslání zásilky a stejně tak vrácení zboží
-        přes PostCube na pár&nbsp;kliků.</p>
+      <p>Bezkontaktní příjem i&nbsp;odeslání poštovní zásilky a stejně tak
+        vrácení zboží přes PostCube na pár&nbsp;kliků.</p>
     </div>
     <div class="icon-section__content mdc-layout-grid__cell">
       <svg width="40" height="64" viewBox="0 0 40 64" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,24 +68,24 @@
         <path d="M3.24324 41.2973V1.62162L1.62162 3.24324H41.2973V0H1.62162H0V1.62162V41.2973H3.24324Z" fill="#1538E5"/>
       </svg>
       <h3>Praktické</h3>
-      <p>Chytrý box je voděodolný, bezpečný, snadno se instaluje a přes
-        bluetooth jej jednoduše otevřete vy i&nbsp;kurýr.</p>
+      <p>Chytrý box je skladný, bezpečný, snadno se instaluje a přes Bluetooth
+        jej jednoduše otevřete vy i&nbsp;kurýr.</p>
     </div>
     <div class="icon-section__content mdc-layout-grid__cell">
       <svg width="48" height="64" viewBox="0 0 48 54" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 0V26.667C0 37.867 9.686 48 24 53.334C38.315 48.001 48 37.867 48 26.667V0H0ZM24 5.334H42.667V26.667H24V48C12.867 43.733 5.333 35.733 5.333 26.667H24V5.334Z" fill="#1538E5"/>
       </svg>
       <h3>Bezpečné</h3>
-      <p>Komunikaci mezi servery, aplikací a poštovní schránkou šifrují
-        nejmodernější bezpečnostní protokoly.</p>
+      <p>Sdílená hnízda hlídá kamerový systém a komunikaci mezi servery,
+        aplikací a schránkou šifrují nejmodernější bezpečnostní protokoly.</p>
     </div>
     <div class="icon-section__content mdc-layout-grid__cell">
       <svg width="48" height="64" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M40 32C35.582 32 32 35.582 32 40C32 44.418 35.582 48 40 48C44.418 48 48 44.418 48 40C48 35.582 44.418 32 40 32ZM8 32C3.582 32 0 35.582 0 40C0 44.418 3.582 48 8 48C12.418 48 16 44.418 16 40C16 35.582 12.418 32 8 32ZM24 4C26.206 4 28 5.794 28 8C28 10.206 26.206 12 24 12C21.794 12 20 10.206 20 8C20 5.794 21.794 4 24 4ZM24 0C19.582 0 16 3.582 16 8C16 12.418 19.582 16 24 16C28.418 16 32 12.418 32 8C32 3.582 28.418 0 24 0ZM31.746 31.31L26 26.502V19.82C25.348 19.93 24.684 20 24 20C23.316 20 22.652 19.93 22 19.82V26.502L16.254 31.31C17.222 32.23 18.038 33.31 18.656 34.506L24 30L29.344 34.506C29.962 33.31 30.778 32.232 31.746 31.31Z" fill="#1538E5"/>
       </svg>
       <h3>Sdílené</h3>
-      <p>PostCube je jen vaše s&nbsp;neomezeným přístupem pro členy rodiny, nebo
-        sdílená s&nbsp;lidmi, kterým věříte, třeba se sousedy.</p>
+      <p>Libovolný počet PostCube mohou sdílet všichni nájemníci v&nbsp;domě nebo
+        různá oddělení napříč celou firmou.</p>
     </div>
 
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
