PostCube - Podstránka texty

--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -23,7 +23,8 @@
               transform="translate(-719.985 -3046.657)"/>
       </svg>
       <h3>Objednáte online</h3>
-      <p>V&nbsp;e-shopu zadáte číslo své PostCube, vyberete dopravce a zaplatíte.</p>
+      <p>V&nbsp;košíku na e-shopu zadáte číslo PostCube, vyberete dopravce a
+        zaplatíte.</p>
     </div>
     <div
       class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
@@ -38,7 +39,7 @@
               transform="translate(-748.02 -2953.099)"/>
       </svg>
       <h3>Přijede kurýr</h3>
-      <p>Pomocí jednorázového kódu kurýr otevře box a vloží do něj
+      <p>Pomocí jednorázového kódu kurýr otevře box a bezpečně do něj vloží
         zásilku.</p>
     </div>
     <div
@@ -57,8 +58,8 @@
         </g>
       </svg>
       <h3>Zásilku vyzvednete</h3>
-      <p>Okamžitě vám přijde upozornění o&nbsp;doručení balíku, který na vás ve
-        schránce&nbsp;čeká.</p>
+      <p>O&nbsp;doručeném balíku, který na vás čeká ve schránce, vám přijde
+        upozornění do aplikace.</p>
     </div>
     <div
       class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
@@ -85,8 +86,8 @@
         </g>
       </svg>
       <h3>Odesílání z&nbsp;boxu</h3>
-      <p>Chcete vrátit zboží nebo odeslat zásilku? V&nbsp;aplikaci stačí vyplnit
-        údaje a balík vložit do&nbsp;boxu.</p>
+      <p>Chcete vrátit zboží nebo odeslat zásilku? V&nbsp;aplikaci vyplníte údaje,
+        balík vložíte do boxu a kurýr už si ho sám vyzvedne.</p>
     </div>
     <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <a href="/jak-box-funguje">Jak to celé funguje?</a>
