--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -84,10 +84,10 @@
           <img alt="Fotka PostCube" src="{{ domacnostiPC | cloudinaryUrl(dpr="auto", width=860) }}">
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h1>PostCube do bytového domu nebo firmy</h1>
-          <p>Soustřeďte se na činnosti, které za to stojí. Přijímejte a odesílejte
-            zásilky v&nbsp;pohodlí domova či kanceláře!
-            <b>#necekamnakuryra</b></p>
+          <h1>PostCube k&nbsp;rodinnému domu</h1>
+          <p>Zásilka vám dorazí nezávisle na tom, co právě děláte. Kurýr ji
+            zvládne doručit bez vaší přítomnosti!
+          <b>#necekamnakuryra</b></p>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
   <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Příjem a odesílání zásilek snadno a rychle</h2>
+        <h2>Příjem a odesílání zásilek z&nbsp;pohodlí domova.</h2>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -107,9 +107,9 @@
             d="M22.1473 16.7158L19.0315 20.4211L17.8947 19.0316C17.3473 18.3579 16.3789 18.2737 15.7052 18.8211C15.0315 19.3684 14.9473 20.3369 15.4947 21.0105L17.8526 23.8316C18.1473 24.1684 18.5684 24.379 19.0315 24.379C19.4947 24.379 19.9157 24.1684 20.2105 23.8316L24.5052 18.6527C25.0526 17.979 24.9684 17.0105 24.2947 16.4632C23.6631 15.9579 22.6947 16.0421 22.1473 16.7158Z"
             fill="#1538E5"/>
         </svg>
-        <h3>Jako stavebnice</h3>
-        <p>Poštovní box napájí elektřina a zabere jen minimum místa. Jednotlivé
-          boxy lze stohovat na sebe až do výšky dvou&nbsp;metrů.</p>
+        <h3>Snadná instalace</h3>
+        <p>Poštovní box pohání čtyři tužkové baterie a nevyžaduje připojení
+          k&nbsp;internetu. Díky tomu může stát kdekoliv u&nbsp;domu nebo na zahradě.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -119,8 +119,8 @@
           <path d="M25 15H15L20 20L25 15Z" fill="#1538E5"/>
         </svg>
         <h3>Bez čekání na kurýra</h3>
-        <p>Ideální řešení, když chcete ušetřit čas. Mobilní aplikace vás
-          upozorní, až zásilka dorazí, a dobu vyzvednutí si zvolíte&nbsp;sami.</p>
+        <p>Online nakupování vás bude bavit. Zásilku si totiž vyzvednete až ve
+          chvíli, kdy chcete vy. Klidně v&nbsp;jednu ráno a v&nbsp;pyžamu.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="27" height="40" viewBox="0 0 27 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -132,8 +132,8 @@
             fill="#1538E5"/>
         </svg>
         <h3>Úžasně jednoduché</h3>
-        <p>Náhodně přiřazený box z&nbsp;tzv. hnízda u&nbsp;vchodu do domu nebo firmy
-          otevřete pohodlně přes Bluetooth ve svém telefonu.</p>
+        <p>Při objednávce zboží stačí zadat číslo chytré poštovní schránky.
+          Mobilní aplikace vás sama upozorní, že balík právě přišel.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
@@ -161,8 +161,9 @@
           <path class="st0" d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
 	c13.8,0,23.1-9.7,23.1-23.8V0h-21v19.7c0,5.4-3,9.1-7.5,9.1H38.5z"/>
 </svg>
-        <h2>Já si to kafe prostě v&nbsp;klidu nevypiju.</h2>
-        <p>Soustřeďte se konečně na práci.</p>
+        <h2>Cože? Vy jste teď přijel? Ale já už nejsem doma. A&nbsp;kde že si to mám
+            vyzvednout?</h2>
+        <p>slova, která už nikdy nebudete muset vyslovit</p>
       </div>
     </div>
   </section>
