--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -76,8 +76,8 @@
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>PostCube do bytového domu nebo firmy</h1>
-          <p>Zásilka vám dorazí nezávisle na tom, co právě děláte. Kurýr ji
-            zvládne doručit bez vaší přítomnosti! #necekamnakuryra
+          <p>Soustřeďte se na činnosti, které za to stojí. Kurýr vám zásilku
+            doručí bez vaší přítomnosti!
           <b><br>#necekamnakuryra</b></p>
         </div>
       </div>
@@ -87,7 +87,7 @@
   <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Doručení i&nbsp;vyzvednutí je s&nbsp;PostCube hračka.</h2>
+        <h2>Příjem a odesílání zásilek snadno a rychle.</h2>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -114,7 +114,7 @@
         </svg>
         <h3>Úžasně jednoduché</h3>
         <p>Náhodně přiřazený box z&nbsp;tzv. hnízda u&nbsp;vchodu do domu nebo firmy
-          otevřete pohodlně přes Bluetooth ve svém mobilním telefonu.</p>
+          otevřete pohodlně přes Bluetooth ve svém telefonu.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
