--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -98,9 +98,9 @@
         <div
           class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h1>Nečekejte na kurýra</h1>
-          <p>Je spousta lepších činností než čekání na kurýra. S&nbsp;chytrou
+          <p>Je spousta zábavnějších činností než čekání na kurýra. S&nbsp;chytrou
             schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
-            <b>#necekamnakuryra</b></p>
+          <b>#necekamnakuryra</b></p>
         </div>
       </div>
     </div>
@@ -127,8 +127,8 @@
           </g>
         </svg>
         <h3>Pro radost z&nbsp;nakupování</h3>
-        <p>Svou zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když právě
-          nejste doma. A&nbsp;díky mobilní aplikaci máte o&nbsp;všem přehled.</p>
+        <p>Svoji zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když zrovna
+          nebudete doma. Díky mobilní aplikaci budete mít o&nbsp;všem přehled.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg xmlns="http://www.w3.org/2000/svg" width="38" height="48" viewBox="0 0 38 38">
