--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -49,7 +49,7 @@
     @media (min-width: 840px) and (max-width: 2039px) {
       .main-info {
         align-self: center;
-        background-image: url({{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }});
+        background-image: url({{ box_header | cloudinaryUrl(dpr="auto", width=860) }});
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
@@ -65,7 +65,7 @@
       .main-info {
         min-width: 700px;
         align-self: center;
-        background-image: url({{ deliveryman | cloudinaryUrl(dpr="auto", width=1020) }});
+        background-image: url({{ box_header | cloudinaryUrl(dpr="auto", width=1020) }});
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
@@ -87,11 +87,11 @@
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div
           class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotka PostCube Kurýra"
-               src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}"
-               srcset="{{ deliveryman | cloudinaryUrl(dpr="1", width=860) }} 1x,
-                       {{ deliveryman | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
-                       {{ deliveryman | cloudinaryUrl(dpr="2", width=860) }} 2x"
+          <img alt="Fotka PostCube"
+               src="{{ box_header | cloudinaryUrl(dpr="auto", width=860) }}"
+               srcset="{{ box_header | cloudinaryUrl(dpr="1", width=860) }} 1x,
+                       {{ box_header | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
+                       {{ box_header | cloudinaryUrl(dpr="2", width=860) }} 2x"
                width="860"
                height="581">
         </div>
