--- a/postcube.cz/src/html/components/video.njk
+++ b/postcube.cz/src/html/components/video.njk
@@ -74,7 +74,7 @@
                width="1082"
                height="608">
         </video>
-        <button id="play-btn">
+        <button id="play-btn" aria-label="Přehrát video o PostCube">
           <svg width="162" height="162" viewBox="0 0 162 162" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M81 0C36.2677 0 0 36.2677 0 81C0 125.732 36.2677 162 81 162C125.732 162 162 125.732 162 81C162 36.2677 125.732 0 81 0ZM60.75 114.75V47.25L121.5 81.9855L60.75 114.75Z"
