PostCube / konfigurator links to shop for now

--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -77,7 +77,7 @@
           <ul class="menu__list">
             <li class=""><a href="/jak-box-funguje">Jak box funguje</a></li>
             <li class=""><a href="/o-nas">Kontakt</a></li>
-            <li class=""><a class="list__btn" href="/konfigurator">Objednat box</a></li>
+            <li class=""><a class="list__btn" href="https://shop.postcube.cz/">Objednat box</a></li>
             <li class="header--social">
               <a class="list__lang--cz" href="/">CZ</a>
               <a href="#" title="PostCube on Facebook" rel="me" class="social-icons social-icons--fb">
