--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -136,7 +136,7 @@
           Mobilní aplikace vás sama upozorní, že balík právě přišel.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
+        <a href="https://shop.postcube.cz/" class="action-btn__label">Objednat PostCube</a>
       </div>
     </div>
   </section>
