--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -93,7 +93,7 @@
       <a href="/jak-box-funguje">Jak to celé funguje?</a>
     </div>
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
+      <a href="https://shop.postcube.cz/" class="action-btn__label">Objednat PostCube</a>
     </div>
   </div>
 </section>
