--- a/postcube.cz/src/html/components/why-pc.njk
+++ b/postcube.cz/src/html/components/why-pc.njk
@@ -89,7 +89,7 @@
     </div>
 
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
+      <a href="https://shop.postcube.cz/" class="action-btn__label">Objednat PostCube</a>
     </div>
   </div>
 </section>
