--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -117,7 +117,7 @@
           otevřete pohodlně přes Bluetooth ve svém telefonu.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
+        <a href="https://shop.postcube.cz/" class="action-btn__label">Objednat PostCube</a>
       </div>
     </div>
   </section>
