--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -175,7 +175,7 @@
         <a href="#how-it-works">Jak schránka PostCube funguje?</a>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
+        <a href="https://shop.postcube.cz/" class="action-btn__label">Objednat PostCube</a>
       </div>
     </div>
   </section>
