--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -1,8 +1,8 @@
 {% extends 'layouts/homepage.njk' %}
 {% set language = cs %}
-{% set deliveryman = images["deliveryman.png"]["public_id"] %}
 {% set hpBg01 = images["hp-bg01.png"]["public_id"] %}
 {% set hpBg02 = images["hp-bg02.png"]["public_id"] %}
+{% set box_header = images["box-header.jpg"]["public_id"] %}
 
 {% block title %}
   PostCube - Hlavní stránka
