PostCube / new header image!

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -2,7 +2,7 @@
 {% set language = cs %}
 {% set hpBg01 = images["hp-bg01.png"]["public_id"] %}
 {% set hpBg02 = images["hp-bg02.png"]["public_id"] %}
-{% set box_header = images["box-header.jpg"]["public_id"] %}
+{% set box_header = images["box-header-image.jpg"]["public_id"] %}
 
 {% block title %}
   PostCube - Hlavní stránka
