--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -11,13 +11,13 @@
         i&nbsp;příjemci vždy po&nbsp;ruce.</p>
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <button class="mdc-button content-btn" type="button">
+          <button class="mdc-button content-btn">
             <a href="https://app.postcube.cz/" class="mdc-button__label" target="_blank" rel="noopener">Stáhnout pro Android</a>
           </button>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <button class="mdc-button content-btn" type="button">
-            <a href="#" class="mdc-button__label" target="_blank" rel="noopener">Stáhnout pro iPhone</a>
+          <button class="mdc-button content-btn" disabled>
+            <span class="mdc-button__label">Již brzy i pro iPhone</span>
           </button>
         </div>
       </div>
