--- a/postcube.cz/src/html/components/hp-header.njk
+++ b/postcube.cz/src/html/components/hp-header.njk
@@ -148,7 +148,7 @@
             </svg>
           </a>
           <div class="dropdown">
-            <button class="dropbtn">Nabídka
+            <button class="dropbtn">Produkt
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
