--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -6,9 +6,10 @@
     <div
       class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-7-desktop">
       <h2>Aplikace ke stažení zdarma</h2>
-      <p>Řešte zásilky svižně a bez čekání. Stáhněte si mobilní aplikaci
-        pro pohodlné otevření PostCube a mějte informace o&nbsp;odesílateli
-        i&nbsp;příjemci vždy po&nbsp;ruce.</p>
+      <p>Stáhněte si aplikaci do svého mobilního telefonu
+a staňte se pánem příjmu i odesílání zásilek.
+Vstupte do světa, kde se na zásilky nečeká!
+</p>
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <button class="mdc-button content-btn">
