--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -171,6 +171,25 @@
         <p>Kovová PostCube funguje přes Bluetooth. Nepotřebujete kabel, připojení
           k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
       </div>
+      <div class="icon-section__content icon-section__content--wide mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662">
+          <defs>
+            <style>.a {
+                fill: #1538e5;
+              }</style>
+          </defs>
+          <path class="a"
+                d="M792.936,2978.994h-.1v-8.632l-4.686-10.252h-9.518v-3.48a3.356,3.356,0,0,0-.034-.334v-3.2H748.036v23.7h-.016v6.907h4.724a7.062,7.062,0,0,0,14.124-.005h9.416a7.062,7.062,0,0,0,14.124,0h2.528a1.182,1.182,0,0,0,1.177-1.177v-2.351A1.182,1.182,0,0,0,792.936,2978.994Zm-33.13,8.239a3.531,3.531,0,1,1,3.53-3.534A3.53,3.53,0,0,1,759.806,2987.233Zm23.542,0h0a3.531,3.531,0,1,1,3.531-3.534A3.531,3.531,0,0,1,783.347,2987.233Zm5.884-15.3h-10.6v-8.241h7.244l3.356,7.349Z"
+                transform="translate(-748.02 -2953.099)"/>
+        </svg>
+        <h3>Síť dopravců roste každým dnem</h3>
+        <p><a href="https://liftago.cz">Liftago</a> už má PostCube plně integrovanou
+          do svého systému.</p>
+        <p>Při objednávce zásilek <strong>přes jiné dopravce</strong> vám kurýr
+          zavolá v&nbsp;okamžiku doručení a vy mu jen v&nbsp;aplikaci pošlete vygenerovaný
+          kód pro otevření PostCube, kam váš balík vloží. Čekat na něj
+          nemusíte.</p>
+      </div>
       <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="#how-it-works">Jak schránka PostCube funguje?</a>
       </div>
