PostCube / prepravci images

--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -1,8 +1,8 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
-{% set deliveryman = images["deliveryman.png"]["public_id"] %}
-{% set prepravciBG01 = images["domacnosti-bg02.png"]["public_id"] %}
-{% set prepravciBG02 = images["delivery.jpg"]["public_id"] %}
+{% set deliveryman = images["delivery-man-header.jpg"]["public_id"] %}
+{% set prepravciBG01 = images["delivery-van.jpg"]["public_id"] %}
+{% set prepravciBG02 = images["delivery-mobile.jpg"]["public_id"] %}
 
 
 
