PostCube / rodinne-domy photo change

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -2,7 +2,7 @@
 {% set language = cs %}
 {% set domacnostiPC = images["domacnosti-bg01.png"]["public_id"] %}
 
-{% set domacnostiBG01 = images["domacnosti-bg02.png"]["public_id"] %}
+{% set domacnostiBG01 = images["delivery-man-header.jpg"]["public_id"] %}
 {% set domacnostiBG02 = images["hp-bg01.png"]["public_id"] %}
 
 {% block title %}
