--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -245,7 +245,7 @@
   {% include 'components/video.njk' %}
   {% include 'components/how-it-works.njk' %}
   {% include 'components/get-app.njk' %}
-
+<div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"></div>
   {% include 'components/contact.njk' %}
 
 {% endblock %}
