PostCube / how it works link

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -183,6 +183,9 @@
   {% include 'components/get-app.njk' %}
   {% include 'components/domacnosti__choose-pc.njk' %}
   {% include 'components/create-pc.njk' %}
+      <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <a href="/jak-box-funguje">Jak to celé funguje?</a>
+    </div>
 
 
   <section id="contact" class="contact">
